# Qynva

./: .gitignore  BRANCHING_SETUP.md  CMakeLists.txt  README.md  requirements.txt  setup_agents.py
.github/ISSUE_TEMPLATE/: agent_improvement.md  bug_report.md  feature_request.md
.github/workflows/: build.yml  gpu-validation.yml  lint.yml  test.yml
agents/: README.md  coder.py  planner.py  router.py  tester.py
agents/configs/: config.json
agents/prompts/: code_generation_javascript.md  code_generation_python.md
docs/: README.md  llm-workflow.md
examples/: README.md
examples/advanced/: .gitkeep
examples/basic/: .gitkeep
examples/benchmarks/: .gitkeep
examples/tutorials/: .gitkeep
include/: README.md
include/qynva/: tensor.hpp
scripts/: README.md
src/: README.md  tensor.cpp
src/backends/amd/: .gitkeep
tests/: README.md  test_basic.py
tests/integration/: .gitkeep
